--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -15,5 +15,9 @@ nav {
   display: flex;
   text-align: center;
   align-items: center;
+  flex-direction: column;
+}
 
+.new-tweet i {
+  margin-top: 0.2em;
 }
