--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,7 +19,8 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: "Source Sans 3", sans-serif;
-  font-family: "Bungee", sans-serif;
+  padding-top: 120px;
+
 }
 nav span {
   font-family: "Bungee", cursive;
