--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,11 +5,12 @@ header {
   height: 400px;
   align-items: center;
   justify-content: center;
-  background-image: url('/images/my-background.png');
+  background-image: url('/images/asfalt-light.png');
 }
 
 header img {
   width: 100px;
   border-radius: 50%;
   margin-bottom: 0.5em;  /* adds space below the image */
+  
 }
