--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,7 @@
 header {
   display: flex;
   width: 100%;
+  padding-top: 220px;
   flex-direction: column;
   height: 400px;
   align-items: center;
