--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,11 +1,10 @@
 .new-tweet {
   display: flex;
-  background-color: #f0f8ff; /* light blue-ish background */
-  padding: 50px;
-  border-radius: 8px; /* rounded corners */
-  max-width: 600px; /* max width so it doesn’t stretch too wide */
-  margin: 40px auto; /* center horizontally with vertical margin */
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 40px;
+  max-width: 800px; /* max width so it doesn’t stretch too wide */
+  margin: 20px auto; /* center horizontally with vertical margin */
+  font-family: "Source Sans 3", sans-serif;
+  align-items: center;
 }
 .new-tweet form {
   display: flex;     
@@ -14,46 +13,52 @@
   gap: 15px;                /* space between form elements */
 }
 
-.new-tweet textarea:focus {
-  font-size: 16px;
-  color: #333;
-  border: 1px solid #ccc;
-  padding: 10px;
+.new-tweet textarea {
+  border: none;
+  border-bottom: 4px solid #545149;
+  background-color: transparent;
+  resize: none;
   width: 100%;
-  border-radius: 4px;
-  resize: vertical; /* allow vertical resizing */
-  margin-bottom: 15px; /* space below the textarea */
-  background-color: #f0faff;
+  font-size: 16px;
+  font-family: "Source Sans 3", sans-serif;
+  color: #545149;
+  outline: none;
+  padding: 4px 0;
+}
+
+.new-tweet textarea:focus {
+  outline: none;
+  border-bottom: 4px solid #545149; /* this adds the border line */
 }
 
 .new-tweet button {
-  background-color: #1da1f2; 
-  color: white;
+  background-color: #4056A1;     /*Blue background*/
+  color: #FFFFFF;  
   font-size: 16px;
   padding: 8px 16px;
+  border-radius: 5px;
   border: none;
-  border-radius: 20px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-top: 10px;
+  font-family: "Bungee", cursive;
 }
 
 .new-tweet button:hover {
-  background-color: #0d8ddb;
+  background-color: #4056A1;
   cursor: pointer;
 }
 
 .output {
   padding: 5px 10px;
-  background-color: #e0f7ff;  
-  border: 1px solid #a0d8ff;
   border-radius: 4px;
-  font-size: 14px;
-  color: #333;
+  font-size: 12px;
+  color: #545149;
   min-width: 40px;
   text-align: center;
   display: inline-block;
   margin-left: 10px; /* space from the button */
+  padding-left: auto;
+  font-family: "Sans 3", sans-serif;
 }
 
 .label {
@@ -61,10 +66,28 @@
   margin-bottom: 8px;   /* space below label */
   font-weight: bold;
   font-size: 16px;
-  color: #222;
+  color: #545149;
+  margin-bottom: 4px;
+  font-family: "Bungee", cursive;
 }
 
 .counter-warning {
   color: red;
-  font-weight: bold; /* optional, just makes it stand out more */
+  font-weight: bold;
+}
+
+.counter {
+  margin-left: auto;
+  color: #545149;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+form div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 8px;
+  padding-top: 8px;
+  font-family: "Bungee", cursive;
 }
