--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -91,3 +91,16 @@ form div {
   padding-top: 8px;
   font-family: "Bungee", cursive;
 }
+
+.error {
+  color: red;
+  font-weight: bold;
+  padding: 10px;
+  background-color: #ffe6e6;
+  border: 1px solid red;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.hidden {
+  display: none;
+}
