--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -100,6 +100,7 @@ form div {
   border: 1px solid red;
   border-radius: 5px;
   margin-bottom: 10px;
+  display: none;
 }
 .hidden {
   display: none;
