set default font colour

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,6 @@
 :root {
   --hover-icon-color: #4056A1;
-
+  --default-font-colour:  #FFFFFF;
 }
 
 nav {
@@ -12,7 +12,7 @@ nav {
   align-items: center;
   justify-content: space-between; /*Tile left, Button right*/
   background-color: var(--hover-icon-color);     /*Blue background*/
-  color: #FFFFFF;           /* White font color */
+  color: var(--default-font-colour);           /* White font color */
   padding: 0 1.5em;    
   /* Space on left and right - the size of an em is relative to its parent's font size*/
   font-family: "Bungee", cursive;
@@ -36,7 +36,7 @@ nav {
 
 .compose-button {
   background-color: var(--hover-icon-color);
-  color: #FFFFFF;
+  color: var(--default-font-colour);
   border: none;
   border-radius: 20px;
   padding: 8px 16px;
@@ -53,7 +53,7 @@ nav {
 }
 
 .compose-button:focus {
-  outline: 3px solid #FFFFFF;
+  outline: 3px solid var(--default-font-colour);
   outline-offset: 2px;
 }
 
@@ -83,7 +83,7 @@ nav {
   bottom: 100%; /* place it above the button */
   left: 50%;
   transform: translateX(-50%);
-  color: #fff;
+  color: var(--default-font-colour);
   margin-bottom: 6px; /* ADD this to push arrow up */
   pointer-events: none;
 }
