--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,6 +23,7 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
 nav span {
   font-family: "Bungee", cursive;
 }
@@ -30,4 +31,59 @@ main {
   width: 90%;
   margin: 0 auto;        /* centers horizontally */
   background-color: inherit;  /* Match background color with body */
+}
+
+/* Mobile styles (default) */
+.main {
+  font-size: 30px;
+}
+
+/* Tablet styles */
+@media only screen and (min-width: 768px) {
+  .feature {
+    width: 33.3%;
+    line-height: 600px;
+  }
+
+  .content {
+    width: 66.7%;
+    float: right;
+  }
+
+  .footer {
+    clear: right;
+  }
+}
+
+/* Desktop styles */
+@media only screen and (min-width: 1024px) {
+  .hero {
+    width: 33.3%;
+    float: left;
+  }
+
+  .feature {
+    line-height: 300px;
+  }
+
+  .menu {
+    background-color: #111111;
+    color: #f0f0f0;
+    text-align: left;
+  }
+
+  .tagline {
+    display: inline;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 12px;
+    color: tomato;
+    float: right;
+  }
+
+  .main {
+    max-width: 1024px;
+    font-size: 16px;
+    margin: 0 auto;
+  }
 }
