--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,11 +1,13 @@
 header {
   display: flex;
   width: 100%;
-  padding-top: 220px;
+  padding-top: 250px;
+  padding-bottom: 100px;
   flex-direction: column;
-  height: 400px;
+  height: 300px;
   align-items: center;
   justify-content: center;
+  background-color: #fcbf49;
   background-image: url('/images/asfalt-light.png');
 }
 
@@ -14,4 +16,9 @@ header img {
   border-radius: 50%;
   margin-bottom: 0.5em;  /* adds space below the image */
   
+}
+
+.avatar-with-name {
+  color: #FFFFFF;
+
 }
