--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,18 +7,26 @@ header {
   height: 300px;
   align-items: center;
   justify-content: center;
-  background-color: #fcbf49;
   background-image: url('/images/asfalt-light.png');
 }
 
 header img {
   width: 100px;
+  height: 100px;
   border-radius: 50%;
-  margin-bottom: 0.5em;  /* adds space below the image */
-  
+  margin-bottom: 10px;  /* adds space below the image */
 }
 
-.avatar-with-name {
+.profile-section {
+  display: flex;
   color: #FFFFFF;
+  font-size: 30px;
+  width: 400px;
+  height: 400px;
+  background-color: #fcbf49;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; 
+  padding-top: 50px;
 
 }
