--- a/sass/header.scss
+++ b/sass/header.scss
@@ -7,14 +7,14 @@ header {
   height: 300px;
   align-items: center;
   justify-content: center;
-  background-image: url("/images/asfalt-light.png");
+  background-image: url('/images/asfalt-light.png');
 }
 
 header img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  margin-bottom: 10px; /* adds space below the image */
+  margin-bottom: 10px;  /* adds space below the image */
 }
 
 .profile-section {
@@ -26,6 +26,8 @@ header img {
   background-color: #fcbf49;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: column; 
   padding-top: 50px;
+
 }
+
