--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -1,7 +1,8 @@
-:root {
-  --hover-icon-color: #4056A1;
-  --default-font-colour:  #FFFFFF;
-}
+$tweeter-primary-colour: #4056A1;
+$default-font-colour: #FFFFFF;
+$content-font-family: "Source Sans 3", sans-serif;
+$tweeter-font-family: "Bungee", cursive;
+
 
 nav {
   display: flex;
@@ -11,11 +12,11 @@ nav {
   text-align: center;
   align-items: center;
   justify-content: space-between; /*Tile left, Button right*/
-  background-color: var(--hover-icon-color);     /*Blue background*/
-  color: var(--default-font-colour);           /* White font color */
+  background-color: $tweeter-primary-colour;     /*Blue background*/
+  color: $default-font-colour;           /* White font color */
   padding: 0 1.5em;    
   /* Space on left and right - the size of an em is relative to its parent's font size*/
-  font-family: "Bungee", cursive;
+  font-family: $tweeter-font-family;
 }
 
 .new-tweet-arrow {
@@ -25,7 +26,7 @@ nav {
   flex-direction: column;
   padding-top: 0%;
   padding-bottom: 10px;
-  font-family: "Source Sans 3", sans-serif;
+  font-family: $content-font-family;
 }
 
 .nav-right {
@@ -35,8 +36,8 @@ nav {
 }
 
 .compose-button {
-  background-color: var(--hover-icon-color);
-  color: var(--default-font-colour);
+  background-color: $tweeter-primary-colour; 
+  color: $default-font-colour;
   border: none;
   border-radius: 20px;
   padding: 8px 16px;
@@ -53,7 +54,7 @@ nav {
 }
 
 .compose-button:focus {
-  outline: 3px solid var(--default-font-colour);
+  outline: 3px solid $default-font-colour;
   outline-offset: 2px;
 }
 
@@ -83,7 +84,7 @@ nav {
   bottom: 100%; /* place it above the button */
   left: 50%;
   transform: translateX(-50%);
-  color: var(--default-font-colour);
+  color: $default-font-colour;
   margin-bottom: 6px; /* ADD this to push arrow up */
   pointer-events: none;
 }
