--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,12 +1,4 @@
 @charset "UTF-8";
-:root {
-  --main-text-color: #545149;
-  --hover-icon-color: #4056A1;
-  --box-shadow-hover: 4px 4px 10px rgba(0, 0, 0, 0.2);
-  --tweet-bg: #f4f1ec;
-  --default-font-colour: #FFFFFF;
-}
-
 .new-tweet {
   display: flex;
   padding: 40px;
@@ -31,19 +23,19 @@
   width: 100%;
   font-size: 16px;
   font-family: "Source Sans 3", sans-serif;
-  color: var(--main-text-color);
+  color: #545149;
   outline: none;
   padding: 4px 0;
 }
 
 .new-tweet textarea:focus {
   outline: none;
-  border-bottom: 4px solid var(--main-text-color); /* this adds the border line */
+  border-bottom: 4px solid #545149; /* this adds the border line */
 }
 
 .new-tweet button {
-  background-color: var(--hover-icon-color); /*Blue background*/
-  color: var(--default-font-colour);
+  background-color: #4056A1; /*Blue background*/
+  color: #FFFFFF;
   font-size: 16px;
   padding: 8px 16px;
   border-radius: 5px;
@@ -54,7 +46,7 @@
 }
 
 .new-tweet button:hover {
-  background-color: var(--hover-icon-color);
+  background-color: #4056A1;
   cursor: pointer;
 }
 
@@ -62,13 +54,13 @@
   padding: 5px 10px;
   border-radius: 4px;
   font-size: 12px;
-  color: var(--main-text-color);
+  color: #545149;
   min-width: 40px;
   text-align: center;
   display: inline-block;
   margin-left: 10px; /* space from the button */
   padding-left: auto;
-  font-family: "Sans 3", sans-serif;
+  font-family: "Source Sans 3", sans-serif;
 }
 
 .label {
@@ -76,7 +68,7 @@
   margin-bottom: 8px; /* space below label */
   font-weight: bold;
   font-size: 16px;
-  color: var(--main-text-color);
+  color: #545149;
   margin-bottom: 4px;
   font-family: "Bungee", cursive;
 }
@@ -88,7 +80,7 @@
 
 .counter {
   margin-left: auto;
-  color: var(--main-text-color);
+  color: #545149;
   font-size: 1rem;
   font-weight: bold;
   transition: color 0.3s;
