--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -1,17 +1,15 @@
-:root {
-  --main-text-color: #545149;
-  --hover-icon-color: #4056A1;
-  --box-shadow-hover: 4px 4px 10px rgba(0, 0, 0, 0.2);
-  --tweet-bg: #f4f1ec;
-  --default-font-colour:  #FFFFFF;
-}
+$tweeter-primary-colour: #4056A1;
+$default-font-colour: #FFFFFF;
+$main-text-colour: #545149;
+$content-font-family: "Source Sans 3", sans-serif;
+$tweeter-font-family: "Bungee", cursive;
 
 .new-tweet {
   display: flex;
   padding: 40px;
   max-width: 800px; /* max width so it doesn’t stretch too wide */
   margin: 20px auto; /* center horizontally with vertical margin */
-  font-family: "Source Sans 3", sans-serif;
+  font-family: $content-font-family;
   align-items: center;
 }
 .new-tweet form {
@@ -28,31 +26,31 @@
   resize: none;
   width: 100%;
   font-size: 16px;
-  font-family: "Source Sans 3", sans-serif;
-  color: var(--main-text-color);
+  font-family: $content-font-family;
+  color: $main-text-colour;
   outline: none;
   padding: 4px 0;
 }
 
 .new-tweet textarea:focus {
   outline: none;
-  border-bottom: 4px solid var(--main-text-color); /* this adds the border line */
+  border-bottom: 4px solid $main-text-colour; /* this adds the border line */
 }
 
 .new-tweet button {
-  background-color: var(--hover-icon-color);     /*Blue background*/
-  color: var(--default-font-colour);
+  background-color: $tweeter-primary-colour;     /*Blue background*/
+  color: $default-font-colour;
   font-size: 16px;
   padding: 8px 16px;
   border-radius: 5px;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  font-family: "Bungee", cursive;
+  font-family: $tweeter-font-family;
 }
 
 .new-tweet button:hover {
-  background-color: var(--hover-icon-color);
+  background-color: $tweeter-primary-colour;
   cursor: pointer;
 }
 
@@ -60,13 +58,13 @@
   padding: 5px 10px;
   border-radius: 4px;
   font-size: 12px;
-  color: var(--main-text-color);
+  color: $main-text-colour;
   min-width: 40px;
   text-align: center;
   display: inline-block;
   margin-left: 10px; /* space from the button */
   padding-left: auto;
-  font-family: "Sans 3", sans-serif;
+  font-family: $content-font-family;
 }
 
 .label {
@@ -74,9 +72,9 @@
   margin-bottom: 8px;   /* space below label */
   font-weight: bold;
   font-size: 16px;
-  color: var(--main-text-color);
+  color: $main-text-colour;
   margin-bottom: 4px;
-  font-family: "Bungee", cursive;
+  font-family: $tweeter-font-family;
 }
 
 .counter .counter-warning {
@@ -86,7 +84,7 @@
 
 .counter {
   margin-left: auto;
-  color: var(--main-text-color);
+  color: $main-text-colour;
   font-size: 1rem;
   font-weight: bold;
   transition: color 0.3s;
@@ -98,7 +96,7 @@ form div {
   align-items: center;
   margin-top: 8px;
   padding-top: 8px;
-  font-family: "Bungee", cursive;
+  font-family: $tweeter-font-family;
 }
 
 .error {
