--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -38,7 +38,7 @@ $tweeter-font-family: "Bungee", cursive;
 }
 
 .new-tweet button {
-  background-color: $tweeter-primary-colour;     /*Blue background*/
+  background-color: $tweeter-primary-colour;  
   color: $default-font-colour;
   font-size: 16px;
   padding: 8px 16px;
