--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,20 +1,14 @@
 header {
   display: flex;
   width: 100%;
-  padding-top: 150px;
+  height: 400px;
+  padding-top: 300px;
   padding-bottom: 100px;
   flex-direction: column;
-  height: 300px;
+  height: 250px;
   align-items: center;
   justify-content: center;
   background-image: url("/images/asfalt-light.png");
-}
-
-header img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-bottom: 10px; /* adds space below the image */
 }
 
 .profile-section {
@@ -22,10 +16,11 @@ header img {
   color: #FFFFFF;
   font-size: 30px;
   width: 100%;
-  height: 400px;
+  height: 500px;
   background-color: #fcbf49;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 150px;
+  padding-bottom: 100px;
 }
