--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,31 +28,21 @@ nav span {
   font-family: "Bungee", cursive;
 }
 
+
+
 /* Mobile styles (default) */
 .main {
   display: flex;
   flex-direction: column; /* mobile default */
   gap: 2rem;
-  padding-top: 10vh;
   width: 100%;
-  margin: 0 auto; /* centers horizontally */
+  margin: 0; /* centers horizontally */
   background-color: inherit; /* Match background color with body */
 }
-
-/* Tablet styles */
-@media only screen and (min-width: 768px) {
-  .feature {
-    width: 33.3%;
-    line-height: 600px;
-  }
-  .content {
-    width: 66.7%;
-    float: right;
-  }
-  .footer {
-    clear: right;
-  }
+.tweet-section {
+  padding-top: 400px;
 }
+
 /* Desktop styles */
 @media only screen and (min-width: 1024px) {
   .hero {
@@ -61,21 +51,46 @@ nav span {
     height: 100vh;
   }
   .main {
-    max-width: 90vw;
+    max-width: 1200vw;
     font-size: 16px;
     margin: 0 auto;
     flex-direction: row;
     gap: 10rem;
     align-items: flex-start;
     padding-top: 100px;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    justify-content: center;
+
   }
   header {
     flex: 1;
-    max-width: 300px;
+    max-width: 30%;
   }
   .tweet-section {
-    flex: 2;
+    flex: 5;
+    max-width: 50%;
+    align-items: center;
+    padding-top: 30px;
+    display: flex;
+    color: #545149;
+    font-size: 30px;
+    width: 400px;
+    height: 400px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 970px;
+    padding-bottom: 30px;
+  }
+  .new-tweet {
+    width: 60vw;
+  }
+
+  .tweet-container {
+    width: 60vw;
+    padding: 30px;
   }
 }
+
+
