--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -4,6 +4,7 @@
 	padding: 40px;
 	max-width: 800px; /* max width so it doesn’t stretch too wide */
 	margin: 20px auto; /* center horizontally with vertical margin */
+  margin-top: 60px;
 	font-family: "Source Sans 3", sans-serif;
 	align-items: center;
 }
@@ -17,7 +18,7 @@
 
 .new-tweet textarea {
 	border: none;
-	border-bottom: 4px solid var(--main-text-color);
+	border-bottom: 4px solid #545149;
 	background-color: transparent;
 	resize: none;
 	width: 100%;
