--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -91,6 +91,8 @@ nav {
   pointer-events: none;
 }
 
+
+/* Nav - Desktop version */
 @media only screen and (min-width: 1024px) {
   nav {
     background-color: #4056a1;
