--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,8 +3,7 @@
 	display: flex;
 	padding: 40px;
 	max-width: 800px; /* max width so it doesn’t stretch too wide */
-	margin: 20px auto; /* center horizontally with vertical margin */
-  margin-top: 60px;
+	margin: 10px auto; /* center horizontally with vertical margin */
 	font-family: "Source Sans 3", sans-serif;
 	align-items: center;
 }
@@ -104,8 +103,18 @@ form div {
 	border-radius: 5px;
 	margin-bottom: 10px;
 	display: none;
+  font-family: "Source Sans 3", sans-serif;
 }
 
 .hidden {
 	display: none;
+}
+
+
+/* New Tweet - Desktop version */
+@media only screen and (min-width: 1024px) {
+
+  .new-tweet {
+    width: 100%;
+  }
 }
