--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,31 +1,39 @@
 .tweet-container {
   max-width: 100%;
+  max-height: 100%;
   margin: 0 auto;
-  padding: 60px;
+  padding: 20px;
+
 }
 
 .tweet {
   border: 4px solid #545149;
   padding: 20px;
-  margin: 30px 0;
+  margin: 20px 0;
   background-color: #f4f1ec;
   font-family: "Source Sans 3", sans-serif;
   transition: box-shadow 0.3s ease;
+  width: 100%;
+  min-height: 150px;
+  height: auto;
+  max-width: 800px;
+  align-items: center;
 }
 
 /* Header of tweet container */
 .tweet header {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-
+  justify-content: space-between; /* avatar+name on left, handle on right */
+  padding-block-start: inherit;
+  max-height: max-content;
 }
 
 .tweet .user-info {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 10px;
-  overflow: visible;
+  flex-shrink: 1;
+  max-width: 70%;
 }
 
 .tweet .user-info img {
@@ -41,7 +49,7 @@
   font-weight: bold;
   font-size: 1.1em;
   color: #545149;
-  align-self: flex-start;
+  align-self: end;
 }
 
 .tweet .handle {
@@ -90,4 +98,18 @@
 
 .tweet:hover .icons i {
   color: #4056A1;
+}
+
+
+/* Tweet - Desktop version */
+@media only screen and (min-width: 1024px) {
+
+  .tweet-container {
+    display: flex;
+    flex-direction: column;
+    width: 60vw;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+  }
 }
