--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,6 +1,6 @@
 .tweet-container {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   padding: 20px;
 
@@ -14,7 +14,7 @@
   font-family: "Source Sans 3", sans-serif;
   transition: box-shadow 0.3s ease;
   width: 100%;
-  min-height: 150px;
+  max-height: none;
   height: auto;
   max-width: 800px;
   align-items: center;
@@ -25,7 +25,7 @@
   display: flex;
   justify-content: space-between; /* avatar+name on left, handle on right */
   padding-block-start: inherit;
-  max-height: max-content;
+  flex-wrap: wrap;
 }
 
 .tweet .user-info {
@@ -66,6 +66,7 @@
   font-size: 1.2em;
   color: #545149;
   word-wrap: break-word;
+  white-space: normal;
 }
 
 /* Footer */
@@ -107,9 +108,10 @@
   .tweet-container {
     display: flex;
     flex-direction: column;
-    width: 60vw;
+    width: 100%;
     padding: 20px;
     justify-content: center;
     align-items: center;
+    
   }
 }
