--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,10 +1,10 @@
 header {
   display: flex;
-  width: 100%;
+  width: 100vw;
   padding-top: 150px;
   padding-bottom: 100px;
   flex-direction: column;
-  height: 300px;
+  height: 400px;
   align-items: center;
   justify-content: center;
   background-image: url('/images/asfalt-light.png');
