--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,8 +1,11 @@
 .tweet-container {
   width: 100%;
   height: 100%;
-  margin: 0 auto;
   padding: 20px;
+  align-items: center;
+  padding: 30px;
+  max-width: 800px;
+  margin: 10px auto;
 
 }
 
@@ -28,6 +31,7 @@
   width: 100%;
   height: fit-content;
   justify-content: space-between;
+  flex-direction: row;
 }
 
 .tweet .user-info {
