--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -26,7 +26,6 @@
 /* Header of tweet container */
 .tweet header {
   display: flex;
-  padding-block-start: inherit;
   flex-wrap: wrap;
   width: 100%;
   height: fit-content;
@@ -117,6 +116,12 @@
     width: 100%;
     padding: 20px;
     align-items: center;
-    
+  }
+  .tweet header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; /* keeps them at the top */
+    width: 100%;
+    flex-wrap: nowrap; /* prevent stacking on wider screens */
   }
 }
